--- a/sub.html
+++ b/sub.html
@@ -34,9 +34,9 @@
         </div>
    
     </body>
-    <script src='http://localhost:3000/socket.io/socket.io.js'></script>
+    <script src='/socket.io/socket.io.js'></script>
     <script>
-       var socket = io.connect('http://localhost:3000')
+       var socket = io.connect()
        $(()=>{
        
         $('#btn').click(() =>{
