--- a/root/index1.html
+++ b/root/index1.html
@@ -13,6 +13,7 @@
         </style>
      <script src='https://code.jquery.com/jquery-2.2.4.js' crossorigin="anonymous"></script>
      <meta charset="utf-8">
+        <meta http-equiv="Content-Security-Policy" content="default-src 'none'; connect-src 'self';font-src 'self'; img-src 'self' data: https:; style-src 'self' ; script-src 'self'">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
