--- a/root/index.html
+++ b/root/index.html
@@ -10,8 +10,8 @@
         </style>
      <script src='https://code.jquery.com/jquery-2.2.4.js' crossorigin="anonymous"></script>
      <meta charset="utf-8">
-    <link rel="icon" href="data:;base64,=">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <link rel="icon" href="data:;base64,iVBORw0KGgo=">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
