--- a/root/index.html
+++ b/root/index.html
@@ -32,7 +32,7 @@
         </div>
    
     </body>
-    <script src='http://chatpii.herokuapp.com/socket.io/socket.io.js'></script>
+    <script src='https://chatpii.herokuapp.com/socket.io/socket.io.js'></script>
     <script>
        var socket = io.connect()
        $(()=>{
@@ -47,8 +47,6 @@
         function addMsg(message){
             $('#displayMsg').append(`<h3> ${message.name} </h3>  ${message.message} <br>`)
         }
-      
-        })
         function getMessage(){
             $.get('http://chatpii.herokuapp.com/vinay',(data)=>{
             console.log(data)
