--- a/root/index.html
+++ b/root/index.html
@@ -58,6 +58,7 @@
             $.post('https://chatpii.herokuapp.com/vinay',message)
           
         }
+        socket.emit('forceDisconnect');
 
     </script>
     
